Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_import_cycle.flow
import "../../std/cycle_a.flow"

program bad_import_cycle

main {
    one : int(1)
    print one
}
